syntax = "proto3";
package teaclave_common_proto;

message UserCredential {
  string id = 1;
  string token = 2;
}